--- a/Project Solutions/SPR/SPR/api/appsettings.json
+++ b/Project Solutions/SPR/SPR/api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "APISqlServer": "Server=numpang.my.id;Database=db_spr1;User Id=sa;Password=Loremipsum0@@@"
+    "APISqlServer": "Server=numpang.my.id;Database=db_spr;User Id=sa;Password=Loremipsum0@@@"
   }
 }
