Proyek Inset sudah berhasil

--- a/Project Solutions/SPR/SPR/api/appsettings.json
+++ b/Project Solutions/SPR/SPR/api/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "APISqlServer": "Server=numpang.my.id;Database=db_spr;User Id=sa;Password=Loremipsum0@@@"
+  },
+
+  "Jwt": {
+    "Key": "becd7053-c2b7-4481-a1f7-b34899172914",
+    "Issuer": "SPR-API",
+    "ClientId": "API01",
+    "Subject": "SPR Simple Applications Services"
   }
 }
