frontend aja yang di commit

--- a/Project Solutions/SPR/SPR/frontend/appsettings.json
+++ b/Project Solutions/SPR/SPR/frontend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "TitleApp": "TOTAL BP",
+    "LogoUrlPath": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Logo_Total_Bangun_Persada.jpg/800px-Logo_Total_Bangun_Persada.jpg",
+    "ApiBaseUrl": "https://localhost:7011/API/"
+  }
+
 }
