--- a/Project Solutions/SPR/SPR/frontend/frontend.csproj
+++ b/Project Solutions/SPR/SPR/frontend/frontend.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Repository\Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\api\api.csproj" />
+  </ItemGroup>
+
 </Project>
