--- a/Project Solutions/SPR/SPR/api/api.csproj
+++ b/Project Solutions/SPR/SPR/api/api.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="27.1.48" />
   </ItemGroup>
 
 </Project>
